--- a/retos_taltech_udea/reto4/css/styles.css
+++ b/retos_taltech_udea/reto4/css/styles.css
@@ -3,6 +3,9 @@ body {
     background-color: #8BB4D9;
     line-height: 1.6;
     margin: 0;
+    padding: 0;
+    color: #333;
+
 }
 header {
     background-color:#B3DAF2;
@@ -23,10 +26,78 @@ h2 {
     color: rgba(4, 43, 44, 0.486);
 }
 
-
-main {
-    padding: 20px;
+.layout-grid{
+    display: grid;
+    grid-template-columns:1fr 2fr 2fr ;
+    grid-template-rows: auto 1fr 1fr auto;
+    margin-top: 0;
     margin-bottom: 30px;
+    gap:20px ;
+    padding: 20px;
+    grid-template-areas:
+        "header header header"
+        "sidebar content_1 content_2"
+        "sidebar content_3 content_3"
+        "footer footer footer";
+        
+}    
+    /* Ajustar la ubicacion de todos los elementos del diseño usando los "grid-area" que les corresponden */   
+.sidebar {
+    grid-area: sidebar;
+    background-color: #B3DAF2 ;
+    padding: 15px;
+    border-radius: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+    
+
+}
+
+.sidebar h2 {
+    color: white;
+}
+
+.content_1 {
+    grid-area: content_1;
+}
+.content_2 { 
+    grid-area: content_2;
+}
+
+.content_3 { 
+    grid-area: content_3;
+}
+
+.sidebar ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.sidebar ul li {
+    margin-bottom: 10px;
+    font-size: 1.2em;
+
+}
+
+.sidebar ul li a {
+    text-decoration: none;
+    color: rgb(151, 151, 151);
+    transition: color 0.3s;
+    
+}
+.sidebar ul li a:hover {
+    color: white;
+}
+.content_1, .content_2, .content_3 {
+    background-color: white;
+    border-radius: 20px;
+    padding: 30px;
+    padding-top: 10px;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.5);
+}
+
+p { 
+    font-size: 1.2em;
+    color: #333;
 }
 
 section {
@@ -39,10 +110,6 @@ section {
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.3);
 }
 
-p, li {
-    font-size: 1.2em;
-    color: #333;
-}
 
 
 ul {
@@ -50,8 +117,8 @@ ul {
 }
 
 footer {
-    background-color:#386273 ;
-    color: #fff;
+    background-color:#B3DAF2 ;
+    color: #584f4f;
     text-align: center;
     padding: 10px;
     position: fixed;
@@ -82,7 +149,17 @@ footer {
     margin: 5px;
     text-align: center;
 
+}
 
-
-
+@media (max-width: 760px) {
+    .layout-grid { 
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "header"
+            "sidebar"
+            "content_1"
+            "content_2"
+            "content_3"
+            "footer";
+    }
 }
