--- a/retos_taltech_udea/Reto6/css/styles.css
+++ b/retos_taltech_udea/Reto6/css/styles.css
@@ -112,17 +112,13 @@ img {
 .portfolio {
     display: grid;
     margin-right: 20px;
-    margin-left: 300px; /* Este es el espcio para el sidebar fijo (280px +
+    margin-left: 300px; /*Espacio para el sidebar fijo (280px + 20px de separacion) */
+    margin-bottom: 60px;
     margin-top: 20px;
     gap: 20px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /*Multiples columnas 
+    grid-auto-rows: min-content; /*las filas se ajustan al contenido */
 
-    /* Defino el nombre y ocupación de cada area */
-    grid-template-areas: 
-        "item1  item1 item1 "
-        "item2 item3 item4"
-        "item5 item5 item5";
-    grid-auto-flow: auto;
 
 }
 /* Asignar cada hijo de item a una area*/
@@ -194,7 +190,6 @@ footer {
     text-align: center;
 
 }
-@media (max-width: )
 
 @media (max-width: 760px) {
     .layout-grid { 
